--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,13 @@
-{
+{  "scripts": {
+  "dev": "nodemon app.js",
+  "start": "node dist/index.js"
+},
+
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
-    "node": "^20.18.1"
+    "node": "^20.18.1",
+    "nodemon": "^3.1.7"
   }
 }
