--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "firebase": "^11.0.2",
     "icons": "^1.0.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
