Database models added

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI = mongodb+srv://jaysablepict:gUliq0RcQDovMNbe@cluster0.ec8mm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://jaysablepict:gUliq0RcQDovMNbe@cluster0.ec8mm.mongodb.net/JAGMS?retryWrites=true&w=majority&appName=Cluster0
 
 PORT = 3000
