--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.0.2",
     "icons": "^1.0.0",
     "lucide-react": "^0.460.0",
+    "mongoose": "^8.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
