--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
+    "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
     "framer-motion": "^11.12.0",
     "icons": "^1.0.0",
