--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
-{  "scripts": {
+{ 
+  "scripts": {
   "dev": "nodemon app.js",
   "start": "node dist/index.js"
-},
-
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
