--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,47 @@
-# Logs
-logs
+# Ignore node_modules in both Backend and Frontend directories
+/Backend/node_modules/
+/Frontend/node_modules/
+
+# Ignore .env files in both Backend and Frontend directories
+/Backend/.env
+/Frontend/.env
+
+# Ignore log files
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+/Backend/*.log
+/Frontend/*.log
 
-node_modules
-dist
-dist-ssr
-*.local
+# Ignore package-lock.json or yarn.lock files if you don’t want them tracked
+/Backend/package-lock.json
+/Frontend/package-lock.json
+/Backend/yarn.lock
+/Frontend/yarn.lock
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Ignore debug, temp, and cache directories
+/Backend/debug/
+/Frontend/debug/
+/Backend/temp/
+/Frontend/temp/
+/Backend/cache/
+/Frontend/cache/
+/Backend/.cache/
+/Frontend/.cache/
+/Backend/.npm/
+/Frontend/.npm/
+
+/# Ignore IDE and editor files (VSCode, WebStorm, etc.)
+.vscode/
+.idea/
+
+# Ignore OS-specific files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Ignore build or dist folders
+/Backend/dist/
+/Frontend/dist/
+/Backend/build/
+/Frontend/build/
+
+# Ignore .env files for other environments (e.g., .env.production, .env.local)
+*.env.*
