--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,17 @@
 {
-    "scripts":
-    {
-        "dev":"nodemon app.js",
-        "start":"node dist/index.js"
+    "scripts": {
+        "dev": "nodemon app.js",
+        "start": "node dist/index.js"
     },
-    "dependencies":
-    {
-        "dotenv":"^16.4.5",
-        "express":"^4.21.1",
-        "mongoose":"^8.8.3",
-        "node":"^20.18.1",
-        "nodemon":"^3.1.7",
-        "pg":"^8.13.1"
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.8.3",
+        "node": "^20.18.1",
+        "nodemon": "^3.1.7",
+        "pg": "^8.13.1",
+        "uuid": "^11.0.5"
     }
 }
